--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server",
-    "local":"nodemon --inspect server"
+    "start": "node server",
+    "local": "nodemon --inspect server"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "nodemon": "^2.0.7",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "sequelize": "^6.4.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
